k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: webcat
  name: webcat-service
  labels:
    app: webcat
spec:
  # type: NodePort
  selector:
    app: webcat
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
